ft--misplaced text alignment on home page fixed for midsizes devices

--- a/pages/pagestyles/home.module.scss
+++ b/pages/pagestyles/home.module.scss
@@ -45,6 +45,9 @@
         @media screen and (max-width: 26.43rem){
           width: 100%;
         }
+        @media screen and (max-width: 56.25rem) {
+          width: 100%;
+        }
     }
 
     p {
